PSPP with partial clauses

--- a/QAOA_trial.ipynb
+++ b/QAOA_trial.ipynb
@@ -3584,31 +3584,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8, 6)\n"
+      "[[0. 0. 1. 0. 1. 1.]\n",
+      " [1. 1. 0. 0. 1. 0.]\n",
+      " [1. 0. 0. 1. 1. 0.]\n",
+      " [1. 1. 0. 1. 0. 0.]\n",
+      " [0. 1. 1. 1. 0. 0.]\n",
+      " [1. 1. 0. 0. 0. 1.]\n",
+      " [1. 0. 1. 0. 0. 1.]\n",
+      " [1. 1. 1. 0. 0. 0.]]\n",
+      "[0, 2, 3, 4, 5, 6, 7]\n",
+      "[1 1 0 0 1 1 1 1]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(7, 6)"
+       "array([1, 0, 0, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "int(np.ceil(6.2))\n",
-    "print(mat_PPSP.shape)\n",
-    "mat_PPSP[:7,:].shape"
+    "print(mat_PPSP)\n",
+    "random_partial_constraint = np.random.choice(mat_PPSP.shape[0], size = 7, replace = False)\n",
+    "print(sorted(random_partial_constraint))\n",
+    "mat_PPSP[sorted(random_partial_constraint)]\n",
+    "print(b_mat)\n",
+    "btry = b_mat[sorted(random_partial_constraint)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 0 0 1 1 1 1]\n",
+      "[0, 2, 3, 4, 5, 6, 7]\n",
+      "[1 0 0 1 1 1 1]\n",
+      "[-1, -1, -1, -1, -1, -1, -1]\n",
+      "[-1  1 -1 -1 -1 -1 -1 -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b_mat)\n",
+    "bcpy = b_mat.copy()\n",
+    "print(sorted(random_partial_constraint))\n",
+    "btry = b_mat[sorted(random_partial_constraint)]\n",
+    "print(btry)\n",
+    "btry = [-1 for i in btry]\n",
+    "print(btry)\n",
+    "bcpy[sorted(random_partial_constraint)] = btry\n",
+    "print(bcpy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[2, 4, 5],\n",
+       "        [0, 1, 4],\n",
+       "        [0, 3, 4],\n",
+       "        [0, 1, 3],\n",
+       "        [1, 2, 3],\n",
+       "        [0, 1, 5],\n",
+       "        [0, 2, 5],\n",
+       "        [0, 1, 2]]),\n",
+       " array([1, 1, 0, 0, 1, 1, 1, 1]))"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xor_prob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 3)\n",
+      "7\n",
+      "[0, 1, 2, 4, 5, 6, 7]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0., 0., 1., 0., 1., 1.],\n",
+       "        [1., 1., 0., 0., 1., 0.],\n",
+       "        [1., 0., 0., 1., 1., 0.],\n",
+       "        [0., 1., 1., 1., 0., 0.],\n",
+       "        [1., 1., 0., 0., 0., 1.],\n",
+       "        [1., 0., 1., 0., 0., 1.],\n",
+       "        [1., 1., 1., 0., 0., 0.]]),\n",
+       " (7, 6),\n",
+       " array([1, 1, 0, 0, 1, 1]),\n",
+       " array([0., 1., 0., 1., 1., 0., 0.]),\n",
+       " array([0, 1, 0, 0, 1, 1, 0, 0]))"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def planted_partial_solution_xorsat(xor_prob, num_vars = 6, epsilon = 0.2):\n",
+    "     \n",
+    "    A_mat, b_mat = xor_prob # we  could in principle build a b_mat here as well \n",
+    "    num_clauses = A_mat.shape[0]\n",
+    "    print(A_mat.shape)\n",
+    "    # calculate the partial num of clauses to be satisfied in the solution\n",
+    "    partial_num_clauses = int(np.ceil((1-epsilon)*num_clauses))\n",
+    "    print(partial_num_clauses)\n",
+    "    \n",
+    "    # Initialize the matrix with zeros\n",
+    "    mat_PPSP = np.zeros((num_clauses, num_vars))\n",
+    "\n",
+    "    # make assignment matrix for the clauses\n",
+    "    for idx, row in enumerate(A_mat):\n",
+    "        mat_PPSP[idx, row] = 1  \n",
+    "        \n",
+    "    # randomly selcting some contraints included, given by partial_num_clauses\n",
+    "    # sorted so that it is trackable \n",
+    "    random_partial_constraint = sorted(np.random.choice(mat_PPSP.shape[0], size = partial_num_clauses, replace = False))\n",
+    "    print(random_partial_constraint)\n",
+    "    \n",
+    "    # make the new matrix with randomly selected clauses\n",
+    "    A_partial = mat_PPSP[random_partial_constraint]\n",
+    "    b_partial = b_mat[random_partial_constraint]\n",
+    "    \n",
+    "    # seed can be removed later \n",
+    "    np.random.seed(1)\n",
+    "    # randomly select a solution bitstring X\n",
+    "    X_mat = np.random.choice(2, num_vars)\n",
+    "    \n",
+    "    b_plant = (A_partial@X_mat)%2\n",
+    "    \n",
+    "    # b_copy = b_partial.copy()\n",
+    "    # b_copy = np.where(b_plant != b_copy, b_plant, b_copy)\n",
+    "    # flip the value of b (Vijk) to fulfill all randomly selected prrtial constraints and rest stays unsatisfied/or satisfied\n",
+    "    b_partial = np.where(b_plant != b_partial, b_plant, b_partial) \n",
+    "\n",
+    "    assert(np.array_equal(b_plant, b_partial))\n",
+    "    # put the planted b values back in the original b matrix\n",
+    "    b_mat_PPSP = b_mat.copy()\n",
+    "    b_mat_PPSP[random_partial_constraint] = b_partial\n",
+    "    return A_partial,A_partial.shape,X_mat,b_partial,b_mat_PPSP \n",
+    "    \n",
+    "    \n",
+    "planted_partial_solution_xorsat(xor_prob,6,0.2)\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -3617,31 +3773,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def planted_partial_solution_xorsat(xor_prob, epsilon = 0.2):\n",
-    "     \n",
-    "    A_mat, b_mat = xor_prob # we  could in principle build a b_mat here as well \n",
-    "    num_clauses,num_vars = A_mat.shape\n",
-    "    partial_num_clauses = int(np.ceil((1-epsilon)*num_clauses))\n",
-    "    # Initialize the matrix with zeros\n",
-    "    mat_PPSP = np.zeros((num_clauses, num_vars))\n",
-    "\n",
-    "    # Fill the matrix\n",
-    "    for idx, row in enumerate(A_mat):\n",
-    "        mat_PPSP[idx, row] = 1  # Direct assignment without slicing\n",
-    "    # matrix with only some contraints included\n",
-    "    A_partial = mat_PPSP[:partial_num_clauses,:]\n",
-    "    np.random.seed(1)\n",
-    "    X_mat = np.random.choice(2, num_vars)\n",
-    "    \n",
-    "    b_plant = (A_partial@X_mat)%2\n",
-    "    # Use np.where to replace elements in b_copy where b_plant is different\n",
-    "    b_mat = np.where(b_plant != b_mat, b_plant, b_mat)\n",
-    "    \n",
-    "    assert( b_plant.all() == b_copy.all())\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    " array([1, 1, 0, 0, 1, 1, 1, 1]))"
    ]
   }
  ],
