--- a/QAOA_trial.ipynb
+++ b/QAOA_trial.ipynb
@@ -4181,10 +4181,16 @@
    "source": [
     "## TODO\n",
     "\n",
-    "1. make the graph plot prettier \n",
-    "2. map the qaoa part consistent with how xor_prob array is generated \n",
-    "3. create .py files to refactor all what is done by now as now we have something set up correctly"
+    "1. make the graph plot prettier with xor_prob array\n",
+    "2. add a plot/graph of the planted problem that has been chosen to solve \n",
+    "3. MUST: map the qaoa part consistent with how xor_prob array is generated \n",
+    "4. create .py files to refactor all what is done by now as now we have something set up correctly"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
