--- a/QAOA_traol_2.ipynb
+++ b/QAOA_traol_2.ipynb
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        " array([1, 1, 0, 0, 1, 1, 1, 1]))"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,12 +533,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 4 5]\n",
+      "[0 1 4]\n",
+      "[0 3 4]\n",
+      "[0 1 3]\n",
+      "[1 2 3]\n",
+      "[0 1 5]\n",
+      "[0 2 5]\n",
+      "[0 1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in zip(xor_prob[0],xor_prob[1]):\n",
+    "    print(i[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "245\n",
+      "014\n",
+      "034\n",
+      "013\n",
+      "123\n",
+      "015\n",
+      "025\n",
+      "012\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "prob_stat = defaultdict()\n",
+    "\n",
+    "for i in zip(xor_prob[0],xor_prob[1]):\n",
+    "    prob_stat[\"\".join(str(j) for j in i[0]))] = (-1)**i[1]\n",
+    "\n",
+    "print(prob_stat)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "prob_stat = default"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -879,7 +932,9 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "\n",
     "from operator import itemgetter\n",
     "from scipy.optimize import minimize\n",
     "from qiskit import QuantumCircuit, transpile\n",
@@ -3484,16 +3539,7 @@
      ]
     }
    ],
-   "source": [
-    "sol = 0\n",
-    "while sol==0:\n",
-    "    Ap,bp = generate_random_3_xorsat(r=3,num_variables=6,num_clauses=6)\n",
-    "    #print(Ap,bp)\n",
-    "    sol = find_num_solutions(A_pass = Ap, b_pass=bp)\n",
-    "    #print(sol, Ap,bp)\n",
-    "    if sol!=0:\n",
-    "        print(\"here \",sol, Ap,bp)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
